--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="page">
+<div class="page{% if page.title == 'About Me' %} about-page{% endif %}">
     <div class="container">
         <header class="page-header">
             <h1 class="page-title">{{ page.title }}</h1>
